artisan key:generate

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=blog
 APP_ENV=local
-APP_KEY=xKHcg0FMdDmxgrjL
+APP_KEY=base64:ErZzMctS5F1JhBshkL0Dte5PyIvW7TcvogwV6FwA630=
 APP_DEBUG=true
 APP_URL=127.0.0.1
 
